@@ -75,3 +75,19 @@
 354 Enter message, ending with "." on a line by itself
 550 Administrative prohibition
 221 myhost.test.ex closing connection
+
+**** SMTP testing session as if from host V4NET.9.8.6
+**** but without any ident (RFC 1413) callback.
+**** This is not for real!
+
+220 myhost.test.ex ESMTP Exim x.yz Tue, 2 Mar 1999 09:44:33 +0000
+250-myhost.test.ex Hello test.ex [V4NET.9.8.6]
+250-SIZE 52428800
+250-PIPELINING
+250 HELP
+250 OK
+250 Accepted
+250 Accepted
+354 Enter message, ending with "." on a line by itself
+550 Administrative prohibition
+221 myhost.test.ex closing connection
